@@ -1,3 +1,4 @@
+Programm für Optionen WITH_SELFTEST und AUTO_CAL überarbeitet.
 Unterstützung eines Mega2560 auf einem ARDUINO mit bootloader über USB.
 Verwendung vom Assembler Makro AOUT für flexible Port-Auswahl.
 Russische und Ukrainische Hilfetexte für mega328.
